2008-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Hyena.Gui/Hyena.Query.Gui/QueryTermsBox.cs: Fix warning.

2008-02-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.AudioProfiles.Gui/ProfileComboBoxConfigurable.cs:
	* src/Core/Banshee.ThickClient/Banshee.AudioProfiles.Gui/ProfileConfigurationDialog.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellAlbum.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/CompositeTrackListView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerWindow.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/PlaylistMenuItem.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/GtkElementsService.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Library.Gui/ImportDialog.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs:
	* src/Core/Banshee.ThickClient/Banshee.ThickClient.mdp:
	* src/Core/Banshee.ThickClient/Makefile.am: More warnings fixed

2008-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit greatly improves the smart playlist editor, both in terms of
	coming up to par with what we have in stable, and in terms of doing that in
	a clean way.  You'll need to blow away your current trunk db to have your
	smart playlists remigrated.  Limits to smart playlists now are functional.
	You can create and edit smart playlits.

	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	Move GetSort method to BansheeQuery to provide consistent sorting for
	smart playlists too.

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs: