@@ -1,3 +1,12 @@
+2008-02-11  Aaron Bockover  <abock@gnome.org>
+
+	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/CompositeTrackListView.cs:
+	Major fix that reparents the artist/album/track views when switching
+	browser positions instead of destroying them and rebuilding; fixes a
+	slew of issues with events when switching positions, is much cleaner
+	overall, and probably has some positive (minor) memory implications. 
+	Sweet.
+
 2008-02-10  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Core/Hyena.Gui/Hyena.Query.Gui/QueryTermsBox.cs: Fix warning.
